fix(frontend): Add spacing
Added a margin between the switch and label

IssueID #20

--- a/src/buttons/switch.module.css
+++ b/src/buttons/switch.module.css
@@ -44,6 +44,7 @@ by Mauricio Allende (https://mallendeo.com/)
   border-radius: var(--toggle-height);
   transition: var(--transition);
   border: none;
+  margin-right: 0.5rem;
 }
 
 .switch .toggle-btn::after {
